# backend/app/modules/market_data/api/currency/schemas.py
@@ -1,0 +1,9 @@
+from pydantic import BaseModel, ConfigDict
+
+
+class Currency(BaseModel):
+    id: int
+    code: str
+    name: str
+
+    model_config = ConfigDict(from_attributes=True)
